--- a/index.html
+++ b/index.html
@@ -16,5 +16,52 @@
     <script src="https://use.fontawesome.com/03a2c909eb.js"></script>
   </head>
   <body>
+
+    <header class="header">
+      <h1>Will Timpson</h1>
+      <p>Full Stack Developer. Outdoor Enthusiast. Amateur Photographer.</p>
+      <section class="social">
+        <a href="https://linkedin.com/in/rwillt">
+          <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+        </a>
+        <a href="https://github.com/thebopshoobop">
+          <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
+        </a>
+        <a href="https://instagram.com/thebopshoobop/">
+          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+        </a>
+      </section>
+    </header>
+
+    <main>
+      <section>
+        <article>
+          <h2>About Me</h2>
+          <p>Enim anim exercitation incididunt sunt Lorem. Irure eu laboris eiusmod non dolor excepteur reprehenderit. Elit deserunt aliquip ullamco elit et fugiat irure excepteur velit proident dolore. Laborum occaecat deserunt tempor pariatur consequat adipisicing ullamco nostrud. Officia consequat voluptate incididunt fugiat.</p>
+          <aside>
+            <img src="me.jpg">
+          </aside>
+        </article>
+      </section>
+
+      <section>
+        <article>
+          <h2>Portfolio</h2>
+          <p>Veniam dolore ipsum anim ea aute enim. Sint deserunt ex laborum fugiat aliqua exercitation tempor labore. Mollit minim dolore proident reprehenderit labore in. Ea ipsum ullamco consectetur voluptate reprehenderit veniam laborum do ut culpa ea. Commodo voluptate nulla cupidatat ad cupidatat.</p>
+          <aside>
+            <img src="#">
+          </aside>
+        </article>
+      </section>
+
+      <footer>
+        <section>
+          <hr>
+          <p><i class="fa fa-copyright" aria-hidden="true"></i>Will Timpson 2017</p>
+        </section>
+      </footer>
+
+    </main>
+
   </body>
 </html>
