--- a/index.html
+++ b/index.html
@@ -13,51 +13,55 @@
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/03a2c909eb.js"></script>
   </head>
   <body>
 
     <header class="header">
-      <h1>Will Timpson</h1>
-      <p>Full Stack Developer. Outdoor Enthusiast. Amateur Photographer.</p>
-      <section class="social">
-        <a href="https://linkedin.com/in/rwillt">
-          <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
-        </a>
-        <a href="https://github.com/thebopshoobop">
-          <i class="fa fa-github-square fa-3x" aria-hidden="true"></i>
-        </a>
-        <a href="https://instagram.com/thebopshoobop/">
-          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-        </a>
+      <section class="header-text">
+        <h1>Will Timpson</h1>
+        <p>Full Stack Developer. Outdoor Enthusiast. Amateur Photographer.</p>
+        <section class="social">
+          <a href="https://linkedin.com/in/rwillt">linkedin</a>
+          <a href="https://github.com/thebopshoobop">github</a>
+          <a href="https://instagram.com/thebopshoobop/">instagram</a>
+          <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
+        </section>
       </section>
     </header>
 
     <main>
-      <section>
-        <article>
-          <h2>About Me</h2>
-          <p>Enim anim exercitation incididunt sunt Lorem. Irure eu laboris eiusmod non dolor excepteur reprehenderit. Elit deserunt aliquip ullamco elit et fugiat irure excepteur velit proident dolore. Laborum occaecat deserunt tempor pariatur consequat adipisicing ullamco nostrud. Officia consequat voluptate incididunt fugiat.</p>
-          <aside>
-            <img src="me.jpg">
-          </aside>
-        </article>
-      </section>
+      <article>
+        <h2>About Me</h2>
+        <section>
+          <p>I am a builder. I have put together everything from computers to homes to menus. These days I focus on web apps. I'm stocking my toolbox with <a href="https://www.python.org/">Python</a>/<a href="http://flask.pocoo.org/">Flask</a> and <a href="https://nodejs.org/en/">Node.js</a>/<a href="http://expressjs.com/">Express</a> for the server allong with <a href="https://facebook.github.io/react/">React</a> and <a href="https://jquery.com/">jQuery</a> for the browser. My markup is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic</a> and my stylesheets are <a href="http://sass-lang.com/">Sassy</a>! Let's build something beautiful together.</p>
+        </section>
+        <aside>
+          <img src="img/me.jpg" alt="A portrait of the author atop a mountian.">
+        </aside>
+        <section>
+          <p>When I'm not pounding the keys, you'll likely find me outside. My favorite sports are bicycling and whitewater kayaking, though I've deveoped a bit of a running habit. If I want to take it slow, I'll just grab my camera and get lost somewhere.</p>
+        </section>
+        <aside>
+          <img src="img/moose.jpg" alt="The author, a whitewater kayaker, paddles down a river slide.">
+      </article>
 
-      <section>
-        <article>
-          <h2>Portfolio</h2>
+      <hr>
+
+      <article>
+        <h2>Portfolio</h2>
+        <section>
           <p>Veniam dolore ipsum anim ea aute enim. Sint deserunt ex laborum fugiat aliqua exercitation tempor labore. Mollit minim dolore proident reprehenderit labore in. Ea ipsum ullamco consectetur voluptate reprehenderit veniam laborum do ut culpa ea. Commodo voluptate nulla cupidatat ad cupidatat.</p>
-          <aside>
-            <img src="#">
-          </aside>
-        </article>
-      </section>
+        </section>
+        <aside>
+          <img src="#">
+        </aside>
+      </article>
+
+        <hr>
 
       <footer>
         <section>
-          <hr>
-          <p><i class="fa fa-copyright" aria-hidden="true"></i>Will Timpson 2017</p>
+          <p>© Will Timpson 2017</p>
         </section>
       </footer>
 
