--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <article>
           <section>
             <h3>I am an Explorer.</h3>
-            <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise the streets and trails on my bike and paddle the rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes I just take it slow, bring my camera, and get lost somewhere.</p>
+            <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise the streets and trails on my bike and paddle the rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes, when I want to take it slow, I'll grab my camera and go get lost somewhere.</p>
           </section>
           <aside>
             <a href="img/moose.jpg">
@@ -103,11 +103,10 @@
       <section>
         <h2>Contact Me</h2>
         <address>
-          You can reach me at <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
+         You can reach me directly at <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
         </address>
       </section>
 
-      <hr>
 
       <footer>
         <section>
