--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </head>
   <body>
 
@@ -30,6 +30,16 @@
     </header>
 
     <main>
+      <header class="slider">
+        <section class="slider-text">
+          <h4>Will Timpson</h4>
+          <a href="https://linkedin.com/in/rwillt">linkedin</a>
+          <a href="https://github.com/thebopshoobop">github</a>
+          <a href="https://instagram.com/thebopshoobop/">instagram</a>
+          <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
+        </section>
+      </header>
+
       <section>
         <h2>About Me</h2>
         <article>
@@ -46,8 +56,8 @@
 
         <article>
           <section>
-            <h3>I am an Explorer.</h3>
-            <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise the streets and trails on my bike and paddle the rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes, when I want to take it slow, I'll grab my camera and go get lost somewhere.</p>
+            <h3>I am an explorer.</h3>
+            <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise streets and trails on my bike and paddle challenging rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes, when I want to take it slow, I'll grab my camera and go get lost somewhere.</p>
           </section>
           <aside>
             <a href="img/moose.jpg">
