--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <hr>
 
       <section>
-        <h2>Portfolio</h2>
+        <h2>Projects</h2>
         <article>
           <section>
             <h3><a href="https://github.com/thebopshoobop/halfyserial">halfyserial</a></h3>
