Layout Tweaks: main > section flexbox

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!--Metadata-->
     <meta charset="utf-8">
@@ -107,6 +107,8 @@
             <a href="img/filmalize.mp4">
               <img src="img/filmalize.png" alt="A screenshot of the filmalize CLI app.">
             </a>
+          </aside>
+        </article>
       </section>
 
         <hr>
