add medium, refactor js

--- a/index.html
+++ b/index.html
@@ -1,133 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!--Metadata-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <title>Will Timpson</title>
-    
-    <!--Styles-->
-    <link href="https://fonts.googleapis.com/css?family=Bellefair|Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 
-    <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="script.js"></script>
-  </head>
-  <body>
+<head>
+  <!--Metadata-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <title>Will Timpson</title>
 
-    <header class="header">
-      <section class="header-text">
-        <h1>Will Timpson</h1>
-        <p>Full Stack Developer. Outdoor Enthusiast. Amateur Photographer.</p>
-        <section class="social">
-          <a href="https://linkedin.com/in/rwillt">linkedin</a>
-          <a href="https://github.com/thebopshoobop">github</a>
-          <a href="https://instagram.com/thebopshoobop/">instagram</a>
-          <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
-        </section>
+  <!--Styles-->
+  <link href="https://fonts.googleapis.com/css?family=Bellefair|Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+
+  <!--Scripts-->
+  <script src="script.js"></script>
+</head>
+
+<body>
+
+  <header class="header">
+    <section class="header-text">
+      <h1>Will Timpson</h1>
+      <p>Full Stack Developer. Outdoor Enthusiast. Amateur Photographer.</p>
+      <section class="social">
+        <a href="https://linkedin.com/in/rwillt">linkedin</a>
+        <a href="https://github.com/thebopshoobop">github</a>
+        <a href="https://instagram.com/thebopshoobop/">instagram</a>
+        <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
+        <a href="https://medium.com/@rwillt">medium</a>
+      </section>
+    </section>
+  </header>
+
+  <main>
+    <header id="slider">
+      <section class="slider-text">
+        <h4>Will Timpson</h4>
+        <a href="https://linkedin.com/in/rwillt">linkedin</a>
+        <a href="https://github.com/thebopshoobop">github</a>
+        <a href="https://instagram.com/thebopshoobop/">instagram</a>
+        <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
+        <a href="https://medium.com/@rwillt">medium</a>
       </section>
     </header>
 
-    <main>
-      <header class="slider">
-        <section class="slider-text">
-          <h4>Will Timpson</h4>
-          <a href="https://linkedin.com/in/rwillt">linkedin</a>
-          <a href="https://github.com/thebopshoobop">github</a>
-          <a href="https://instagram.com/thebopshoobop/">instagram</a>
-          <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
+    <section>
+      <h2>About Me</h2>
+      <article>
+        <section>
+          <h3>I am a builder.</h3>
+          <p>I've assembled everything from computers to homes to menus. These days I focus on web apps. I'm stocking my toolbox
+            with <a href="https://www.python.org/">Python</a>/<a href="http://flask.pocoo.org/">Flask</a> and <a href="https://nodejs.org/en/">Node.js</a>/
+            <a href="http://expressjs.com/">Express</a> for the server along with <a href="https://facebook.github.io/react/">React</a>            and <a href="https://jquery.com/">jQuery</a> for the browser. My markup is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic</a>            and my stylesheets are <a href="http://sass-lang.com/">Sassy</a>. Let's build something beautiful together!</p>
         </section>
-      </header>
-
-      <section>
-        <h2>About Me</h2>
-        <article>
-          <section>
-            <h3>I am a builder.</h3>
-            <p>I've assembled everything from computers to homes to menus. These days I focus on web apps. I'm stocking my toolbox with <a href="https://www.python.org/">Python</a>/<a href="http://flask.pocoo.org/">Flask</a> and <a href="https://nodejs.org/en/">Node.js</a>/<a href="http://expressjs.com/">Express</a> for the server along with <a href="https://facebook.github.io/react/">React</a> and <a href="https://jquery.com/">jQuery</a> for the browser. My markup is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic</a> and my stylesheets are <a href="http://sass-lang.com/">Sassy</a>. Let's build something beautiful together!</p>
-          </section>
-          <aside>
-            <a href="img/me.jpg">
+        <aside>
+          <a href="img/me.jpg">
               <img src="img/me.jpg" alt="A portrait of the author atop a mountian.">
             </a>
-          </aside>
-        </article>
+        </aside>
+      </article>
 
-        <article>
-          <section>
-            <h3>I am an explorer.</h3>
-            <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise streets and trails on my bike and paddle challenging rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes, when I want to take it slow, I'll grab my camera and go get lost somewhere.</p>
-          </section>
-          <aside>
-            <a href="img/moose.jpg">
+      <article>
+        <section>
+          <h3>I am an explorer.</h3>
+          <p>When I'm not pounding the keys, you'll likely find me outside. I love to cruise streets and trails on my bike and
+            paddle challenging rivers in my kayak. Lateley, I've even developed a bit of a running habit. Sometimes, when
+            I want to take it slow, I'll grab my camera and go get lost somewhere.</p>
+        </section>
+        <aside>
+          <a href="img/moose.jpg">
               <img src="img/moose.jpg" alt="The author, a whitewater kayaker, paddles down a river slide.">
             </a>
-          </aside>
+        </aside>
 
-        </article>
-      </section>
+      </article>
+    </section>
 
-      <hr>
+    <hr>
 
-      <section>
-        <h2>Projects</h2>
-        <article>
-          <section>
-            <h3><a href="https://github.com/thebopshoobop/halfyserial">halfyserial</a></h3>
-            <p>A Flask app that I built for my home stereo. It controls, via a USB serial adapter, a matrix switch and multi-zone power amplifier. This setup lets me play different things to different rooms, or the same thing everywhere, or whatever combination I feel like. It's a whole-house audio solution like Sonos or Bose SoundTouch, but with more wires and more hacking!</p>
-          </section>
-          <aside>
-            <a href="img/halfyserial.jpg">
+    <section>
+      <h2>Projects</h2>
+      <article>
+        <section>
+          <h3><a href="https://github.com/thebopshoobop/halfyserial">halfyserial</a></h3>
+          <p>A Flask app that I built for my home stereo. It controls, via a USB serial adapter, a matrix switch and multi-zone
+            power amplifier. This setup lets me play different things to different rooms, or the same thing everywhere, or
+            whatever combination I feel like. It's a whole-house audio solution like Sonos or Bose SoundTouch, but with more
+            wires and more hacking!</p>
+        </section>
+        <aside>
+          <a href="img/halfyserial.jpg">
               <img src="img/halfyserial.jpg" alt="A screenshot of the halfyserial web app.">
             </a>
-          </aside>
-        </article>
+        </aside>
+      </article>
 
-        <article>
-          <section>
-            <h3><a href="https://github.com/thebopshoobop/feedfin">feedfin</a></h3>
-            <p>A feed agregator that I built with Flask and the <a href="https://ponyorm.com/">Pony ORM</a>. It uses a <code>ProcessPoolExecutor</code> from the <a href="https://docs.python.org/3/library/concurrent.futures.html">concurrent.futures</a> module to rapidly fetch and parse your feeds in parallel.</p>
-          </section>
-          <aside>
-            <a href="img/feedfin.jpg">
+      <article>
+        <section>
+          <h3><a href="https://github.com/thebopshoobop/feedfin">feedfin</a></h3>
+          <p>A feed agregator that I built with Flask and the <a href="https://ponyorm.com/">Pony ORM</a>. It uses a <code>ProcessPoolExecutor</code>            from the <a href="https://docs.python.org/3/library/concurrent.futures.html">concurrent.futures</a> module to
+            rapidly fetch and parse your feeds in parallel.</p>
+        </section>
+        <aside>
+          <a href="img/feedfin.jpg">
               <img src="img/feedfin.jpg" alt="A screenshot of the feedfin web app.">
             </a>
-          </aside>
+        </aside>
 
-        </article>
+      </article>
 
-        <article>
-          <section>
-            <h3><a href="https://github.com/thebopshoobop/filmalize">filmalize</a></h3>
-            <p>A tool for standardizing video files, filmalize is a CLI app built with <a href="http://click.pocoo.org/6/">Click</a> that uses <a href="https://www.ffmpeg.org/">ffmpeg</a> to do the converting. Currently filmalize only outputs <code>mp4</code> containers with <code>h264</code> video, <code>aac</code> audio, and <code>mov_text</code> subtitles, but I plan to make the output format configurable. That particular combination was selected for its broad compatibility with web browsers.</p>
-          </section>
-          <aside>
-            <a href="img/filmalize.mp4">
+      <article>
+        <section>
+          <h3><a href="https://github.com/thebopshoobop/filmalize">filmalize</a></h3>
+          <p>A tool for standardizing video files, filmalize is a CLI app built with <a href="http://click.pocoo.org/6/">Click</a>            that uses <a href="https://www.ffmpeg.org/">ffmpeg</a> to do the converting. Currently filmalize only outputs
+            <code>mp4</code> containers with <code>h264</code> video, <code>aac</code> audio, and <code>mov_text</code> subtitles,
+            but I plan to make the output format configurable. That particular combination was selected for its broad compatibility
+            with web browsers.</p>
+        </section>
+        <aside>
+          <a href="img/filmalize.mp4">
               <img src="img/filmalize.png" alt="A screenshot of the filmalize CLI app.">
             </a>
-          </aside>
-        </article>
-      </section>
+        </aside>
+      </article>
+    </section>
 
-        <hr>
+    <hr>
 
+    <section>
+      <h2>Contact Me</h2>
+      <address>
+        You can reach me directly at <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
+      </address>
+    </section>
+
+
+    <footer>
       <section>
-        <h2>Contact Me</h2>
-        <address>
-         You can reach me directly at <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
-        </address>
+        <p>© Will Timpson 2017</p>
       </section>
+    </footer>
 
+  </main>
 
-      <footer>
-        <section>
-          <p>© Will Timpson 2017</p>
-        </section>
-      </footer>
+</body>
 
-    </main>
-
-  </body>
 </html>
