add resume, update projects

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="https://instagram.com/thebopshoobop/">instagram</a>
         <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
         <a href="https://medium.com/@rwillt">medium</a>
+        <a href="/Will_Timpson-Resume.pdf">resume</a>
       </section>
     </section>
   </header>
@@ -41,6 +42,7 @@
         <a href="https://instagram.com/thebopshoobop/">instagram</a>
         <a href="https://www.hackerrank.com/thebopshoobop">hackerrank</a>
         <a href="https://medium.com/@rwillt">medium</a>
+        <a href="/Will_Timpson-Resume.pdf">resume</a>
       </section>
     </header>
 
@@ -50,13 +52,20 @@
         <section>
           <h3>I am a builder.</h3>
           <p>I've assembled everything from computers to homes to menus. These days I focus on web apps. I'm stocking my toolbox
-            with <a href="https://www.python.org/">Python</a>/<a href="http://flask.pocoo.org/">Flask</a> and <a href="https://nodejs.org/en/">Node.js</a>/
-            <a href="http://expressjs.com/">Express</a> for the server along with <a href="https://facebook.github.io/react/">React</a>            and <a href="https://jquery.com/">jQuery</a> for the browser. My markup is <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic</a>            and my stylesheets are <a href="http://sass-lang.com/">Sassy</a>. Let's build something beautiful together!</p>
+            with
+            <a href="https://www.python.org/">Python</a>/
+            <a href="http://flask.pocoo.org/">Flask</a> and
+            <a href="https://nodejs.org/en/">Node.js</a>/
+            <a href="http://expressjs.com/">Express</a> for the server along with
+            <a href="https://facebook.github.io/react/">React</a> and
+            <a href="https://jquery.com/">jQuery</a> for the browser. My markup is
+            <a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic</a> and my stylesheets are
+            <a href="http://sass-lang.com/">Sassy</a>. Let's build something beautiful together!</p>
         </section>
         <aside>
           <a href="img/me.jpg">
-              <img src="img/me.jpg" alt="A portrait of the author atop a mountian.">
-            </a>
+            <img src="img/me.jpg" alt="A portrait of the author atop a mountian.">
+          </a>
         </aside>
       </article>
 
@@ -69,8 +78,8 @@
         </section>
         <aside>
           <a href="img/moose.jpg">
-              <img src="img/moose.jpg" alt="The author, a whitewater kayaker, paddles down a river slide.">
-            </a>
+            <img src="img/moose.jpg" alt="The author, a whitewater kayaker, paddles down a river slide.">
+          </a>
         </aside>
 
       </article>
@@ -82,45 +91,86 @@
       <h2>Projects</h2>
       <article>
         <section>
-          <h3><a href="https://github.com/thebopshoobop/halfyserial">halfyserial</a></h3>
-          <p>A Flask app that I built for my home stereo. It controls, via a USB serial adapter, a matrix switch and multi-zone
-            power amplifier. This setup lets me play different things to different rooms, or the same thing everywhere, or
-            whatever combination I feel like. It's a whole-house audio solution like Sonos or Bose SoundTouch, but with more
-            wires and more hacking!</p>
+          <h3>
+            <a href="https://github.com/thebopshoobop/Dinnerbell">Dinnerbell</a>
+          </h3>
+          <p>A Meal-planning and recipe discovery app built as part of a team utilizing Agile techniques with Node.js, Express,
+            Passport, OAuth, React, Redux, and Material-UI.
+            <a href="https://dinnerbell.herokuapp.com">Dinnerbell</a> makes it easy to specify your dietary preferences and invite your friends to your next get together.</p>
         </section>
         <aside>
-          <a href="img/halfyserial.jpg">
-              <img src="img/halfyserial.jpg" alt="A screenshot of the halfyserial web app.">
-            </a>
+          <a href="img/dinnerbell.png">
+            <img src="img/dinnerbell.png" alt="A screenshot of the Dinnerbell web app.">
+          </a>
         </aside>
       </article>
 
       <article>
         <section>
-          <h3><a href="https://github.com/thebopshoobop/feedfin">feedfin</a></h3>
-          <p>A feed agregator that I built with Flask and the <a href="https://ponyorm.com/">Pony ORM</a>. It uses a <code>ProcessPoolExecutor</code>            from the <a href="https://docs.python.org/3/library/concurrent.futures.html">concurrent.futures</a> module to
-            rapidly fetch and parse your feeds in parallel.</p>
+          <h3>
+            <a href="https://github.com/thebopshoobop/Djello">Djello</a>
+          </h3>
+          <p>A kanban project management application built with Node.js, Socket.io, Mongoose, React, Redux and Semantic UI.
+            Djello makes organization and collaboration a snap!</p>
+        </section>
+        <aside>
+          <a href="img/djello.png">
+            <img src="img/djello.png" alt="A screenshot of the Djello web app.">
+          </a>
+        </aside>
+      </article>
+
+      <article>
+        <section>
+          <h3>
+            <a href="https://github.com/thebopshoobop/Fideligard">Fideligard</a>
+          </h3>
+          <p>Stock price viewer and trading simulation built with Node.js, Express, React, Redux, Semantic UI, and the Quandl
+            WIKI API. Pick your stocks well and reap the rewards.</p>
+        </section>
+        <aside>
+          <a href="img/fideligard.png">
+            <img src="img/fideligard.png" alt="A screenshot of the Fideligard web app.">
+          </a>
+        </aside>
+      </article>
+
+      <article>
+        <section>
+          <h3>
+            <a href="https://github.com/thebopshoobop/feedfin">feedfin</a>
+          </h3>
+          <p>A feed agregator that I built with Flask, Jinja, SQLite, Bootstrap, and the
+            <a href="https://ponyorm.com/">Pony ORM</a>. It uses a
+            <code>ProcessPoolExecutor</code> from the
+            <a href="https://docs.python.org/3/library/concurrent.futures.html">concurrent.futures</a> module to rapidly fetch and parse your feeds in parallel.</p>
         </section>
         <aside>
           <a href="img/feedfin.jpg">
-              <img src="img/feedfin.jpg" alt="A screenshot of the feedfin web app.">
-            </a>
+            <img src="img/feedfin.jpg" alt="A screenshot of the feedfin web app.">
+          </a>
         </aside>
 
       </article>
 
       <article>
         <section>
-          <h3><a href="https://github.com/thebopshoobop/filmalize">filmalize</a></h3>
-          <p>A tool for standardizing video files, filmalize is a CLI app built with <a href="http://click.pocoo.org/6/">Click</a>            that uses <a href="https://www.ffmpeg.org/">ffmpeg</a> to do the converting. Currently filmalize only outputs
-            <code>mp4</code> containers with <code>h264</code> video, <code>aac</code> audio, and <code>mov_text</code> subtitles,
-            but I plan to make the output format configurable. That particular combination was selected for its broad compatibility
-            with web browsers.</p>
+          <h3>
+            <a href="https://github.com/thebopshoobop/filmalize">filmalize</a>
+          </h3>
+          <p>A tool for standardizing video files, filmalize is a CLI app built with
+            <a href="http://click.pocoo.org/6/">Click</a> that uses
+            <a href="https://www.ffmpeg.org/">ffmpeg</a> to do the converting. Currently filmalize only outputs
+            <code>mp4</code> containers with
+            <code>h264</code> video,
+            <code>aac</code> audio, and
+            <code>mov_text</code> subtitles, but I plan to make the output format configurable. That particular combination was selected for its
+            broad compatibility with web browsers.</p>
         </section>
         <aside>
           <a href="img/filmalize.mp4">
-              <img src="img/filmalize.png" alt="A screenshot of the filmalize CLI app.">
-            </a>
+            <img src="img/filmalize.png" alt="A screenshot of the filmalize CLI app.">
+          </a>
         </aside>
       </article>
     </section>
@@ -130,7 +180,8 @@
     <section>
       <h2>Contact Me</h2>
       <address>
-        You can reach me directly at <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
+        You can reach me directly at
+        <a href="mailto:will.timpson@gmail.com">will.timpson@gmail.com</a>
       </address>
     </section>
 
